fixtures/parser/invalid/function_call_arguments_invalid.php
<?php
// invalid: function calls cannot contain empty argument slots
foo(,);
foo($foo,,);
foo($foo,,$bar);
foo(,$foo);
